Fix HUD not sticking to bottom on mobile
This fixes the status bar floating when scrolling up with touch, as the address bar gets shown where previously hidden, on browsers like mobile Chrome.

It can still get cut off temporarily when scrolling down, with an unwanted upwards wipe effect, as the address bar gets hidden.

Adding dynamic viewport units to the container like so didn't seem to help:
	width: 100dvw;
	height: 100dvh;

--- a/core/tracky-mouse.css
+++ b/core/tracky-mouse.css
@@ -260,7 +260,7 @@
 
 #tracky-mouse-screen-overlay-message {
 	color: yellow;
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	left: 50%;
 	transform: translateX(-50%);
